Instantiate supplier via constructor and handle all reflective exceptions
Use constructor instead of Class#newInstance cause the latter is deprecated for good reason as of JDK9.